Add partial for dropdown items

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,7 +38,7 @@ body {
   background-color: rgb(232, 232, 232) !important;
 }
 
-.dropdown-actions {
+.post-actions {
   margin-top: -3.25rem;
 }
 
