--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -15,22 +15,7 @@
         </div>
       </div>
       <div class="col-1 align-self-end ps-4">
-        <% if current_user == post.author ||
-            params["action"] != "show" %>
-
-          <div class="btn-group dropdown-actions">
-            <a class="text-primary text-decoration-none pointer" data-bs-toggle="dropdown"><i class="bi-three-dots-vertical"></i></a>
-            <ul class="dropdown-menu">
-              <% if params["action"] != "show" %>
-                <li><%= link_to "Show", post, class: "dropdown-item" %></li>
-              <% end %>
-              <% if current_user == post.author %>
-                <li><%= link_to "Edit", edit_post_path(post), class: "dropdown-item" %></li>
-                <li><%= link_to "Destroy", post, method: :delete, class: "dropdown-item" %></li>
-              <% end %>
-            </ul>
-          </div>
-        <% end %>
+        <%= render "resources/dropdown_items", model: post, resource: "posts" %>
       </div>
     </div>
     <div class="card-text mb-3">
