Change form commentable to hidden fields
To be able to comment in posts#index

--- a/app/views/comments/_comment_section.html.erb
+++ b/app/views/comments/_comment_section.html.erb
@@ -5,6 +5,6 @@
     <% end %>
   </div>
   <% unless edit %>
-    <%= render "form", model: Comment.new %>
+    <%= render "form", model: Comment.new, commentable: comment %>
   <% end %>
 </div>
