--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :content do %>
-  <%= render "comment", comment: @comment, sub: false, nested: false %>
+  <%= render "comment", comment: @comment, attr: [] %>
 <% end %>
 
 <% content_for :comments do %>
