--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -40,11 +40,11 @@
       <div class="comment-list pb-3">
         <% if params["action"] == "show" %>
           <% post.comments.each do |comment| %>
-            <%= render "comments/comment", comment: comment, sub: false, nested: true %>
+            <%= render "comments/comment", comment: comment, attr: [:show_nested] %>
           <% end %>
         <% else %>
           <% post.comments.last(3).each do |comment| %>
-            <%= render "comments/comment", comment: comment, sub: false, nested: true %>
+            <%= render "comments/comment", comment: comment, attr: [:show_nested] %>
           <% end %>
         <% end %>
       </div>
