--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -15,7 +15,7 @@
     <div class="ps-3 pe-2 py-1">
       <a href="#" class="text-decoration-none">Like</a>
       <span class="fw-bold">·</span>
-      <% unless attr.include?(:is_nested) %>
+      <% unless comment.nested %>
         <a href="#" class="text-decoration-none">Reply</a>
         <span class="fw-bold">·</span>
       <% end %>
@@ -25,7 +25,7 @@
     <% if attr.include?(:show_nested) && comment.comments.any? %>
       <div class="my-4">
         <% comment.comments.each do |sub_comment| %>
-          <%= render "comments/comment", comment: sub_comment, attr: [:is_nested] %>
+          <%= render "comments/comment", comment: sub_comment, attr: [] %>
         <% end %>
       </div>
     <% end %>
