--- a/app/views/comments/_comment_section.html.erb
+++ b/app/views/comments/_comment_section.html.erb
@@ -1,7 +1,7 @@
 <div class="comments-section ps-5 pe-1 pb-3">
   <div class="comment-list ps-3 pb-3">
     <% comment.comments.each do |comment| %>
-      <%= render "comment", comment: comment, attr: [:is_nested] %>
+      <%= render "comment", comment: comment, attr: [] %>
     <% end %>
   </div>
   <% unless edit %>
