--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,8 +3,8 @@
     <img src="https://bulma.io/images/placeholders/48x48.png" class="rounded-circle">
   </div>
   <div class="col">
-    <%= f.hidden_field :commentable_id, value: commentable.id %>
-    <%= f.hidden_field :commentable_type, value: commentable.class %>
+    <%= f.hidden_field :commentable_id, value: commentable.id, id: nil %>
+    <%= f.hidden_field :commentable_type, value: commentable.class, id: nil %>
     <%= f.text_field :body, class: "form-control rounded-pill comment-input", id: "comment-#{commentable.id}" %>
   </div>
   <div class="col-2 pt-1">
